name:           ynab-haskell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/ynab-haskell#readme>
homepage:       https://github.com/githubuser/ynab-haskell#readme
bug-reports:    https://github.com/githubuser/ynab-haskell/issues
author:         Lindsey Jacks
maintainer:     linzjax@gmail.com
copyright:      2018 Lindsey Jacks
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/ynab-haskell

library
  exposed-modules:
    YNAB.Client
    , YNAB.Models.Account
    , YNAB.Models.Budget
    , YNAB.Models.Category
    , YNAB.Models.Config
    , YNAB.Models.CurrencyFormat
    , YNAB.Models.DateFormat
    , YNAB.Models.Month
    , YNAB.Models.Payee
    , YNAB.Models.User
    , YNAB.Models.YnabError
    , YNAB.Models.ScheduledTransaction
    , YNAB.Models.Transaction
  other-modules:
      Paths_ynab_haskell
  hs-source-dirs:
      src
  build-depends:
       base >=4.7 && <5
     , aeson
     , bytestring
     , exceptions
     , unordered-containers
     , http-client
     , http-conduit
     , monad-control
     , time
     , text
     , yaml
  default-language: Haskell2010
  default-extensions: DeriveGeneric, LambdaCase

executable ynab-haskell-exe
  main-is: Main.hs
  other-modules:
      Paths_ynab_haskell
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ynab-haskell
    , aeson
    , bytestring
    , http-client
    , http-conduit
    , text
    , yaml
  default-language: Haskell2010

test-suite ynab-haskell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_ynab_haskell
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , ynab-haskell
    , hspec
    , QuickCheck
  default-language: Haskell2010
  default-extensions: LambdaCase
